[tool.poetry]
name        = "pwnlib"
version     = "0.1.0"
description = "Python package for solving CTF challenges."
authors     = ["Omer Lubin <omer@lubin.ws>"]
readme      = "readme.md"
include     = ["pwnlib/py.typed"]

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
